ai-services/deepseek-harness/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek-harness-route
  namespace: deepseek-harness   
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - deepseek-harness.crobceratops.ryanbeales.com
    - deepseek-harness.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''	
          kind: Service
          name: deepseek-harness
          port: 3080
          weight: 1
